<resources>
    <string name="app_name">Photo Album</string>

    <string name="nothing_to_show_yet">Nothing to show yet.</string>
    <string name="loading_data_failed">Loading data failed.</string>
    <string name="try_again">Try again</string>
    <string name="photos">Photos</string>
    <string name="wrong_album_id">Wrong Album ID</string>
    <string name="server_isnt_responding">Server isn\'t responding</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="photo_title">Photo title</string>
    <string name="album_name">Album name</string>
    <string name="add_photo_error">You can\'t add new photo now, try it again later</string>
    <string name="add_new_photo">Add new photo</string>
    <string name="photo_title_error">Photo title is required</string>
    <string name="album_spinner_error">Album is required</string>
    <string name="unable_load_albums_names">Unable to loading albums names</string>
    <string name="photo_uploaded_successful">Photo uploaded successful</string>
</resources>
