<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_states__content"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/content_states__progress_shadow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/alpha_black__error"
        android:clickable="false"
        android:focusable="false"
        android:visibility="gone"
        tools:visibility="visible"/>

    <ProgressBar
        android:id="@+id/content_states__progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/content_states__nothing_to_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nothing_to_show_yet"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible"/>

    <LinearLayout
        android:id="@+id/content_states__error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/content_states__error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_data_failed"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:gravity="center"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/content_states__button_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/try_again"/>

    </LinearLayout>

</FrameLayout>