<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_photo__fragment__content"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:clickable="true">

    <ScrollView
        android:id="@+id/add_photo__fragment__scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_photo__fragment__input__photo_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:hint="@string/photo_title"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_photo__fragment__photo_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/add_photo__fragment__spinner_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColor="?attr/colorControlActivated"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textSize="@dimen/abc_text_size_caption_material"
                android:text="@string/album_name"/>

            <FrameLayout
                android:id="@+id/add_photo__fragment__spinner_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_with_grey_stroke">

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/add_photo__fragment__spinner"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="4dp"/>

            </FrameLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_photo__fragment__button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/add_new_photo"
                android:layout_marginTop="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimary"/>

        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/add_photo__fragment__content_states__albums"
        layout="@layout/content_states"/>

    <include
        android:id="@+id/add_photo__fragment__content_states__photo_upload"
        layout="@layout/content_states"/>

</FrameLayout>